--- a/templates/Ingame/AnswerShow_YN.html
+++ b/templates/Ingame/AnswerShow_YN.html
@@ -11,8 +11,8 @@
 
 <body>
     <div class="container">
-        <h1>{{showncode}} {{qtn}}</h1>
-        <h3>Timer: <span id="timer">15</span> seconds</h3>
+        <h1>{{shcd}} {{txt}}</h1>
+        <h3>Timer: <span id="timer">{{rmn}}</span> seconds</h3>
         <div class="YN-answers-grid">
             <button id="option-Y" class="option-letter-big" onclick="pressedAnswerButton()">Y</button>
             <button id="option-N" class="option-letter-big" onclick="pressedAnswerButton()">N</button>
