--- a/templates/Ingame/QuestionShow.html
+++ b/templates/Ingame/QuestionShow.html
@@ -10,9 +10,9 @@
 
 <body>
     <div class="container">
-        <h1>{{showncode}} {{qtn}}</h1>
+        <h1>{{shcd}} {{txt}}</h1>
         <p class="small-text">Single Select</p>
-        <h3>Timer: <span id="timer">15</span> seconds</h3>
+        <h3>Timer: <span id="timer">{{rmn}}</span> seconds</h3>
         <div class="answer-option">
             <p class="option-letter">A</p>
             <p class="option-text">{{ opt[0] }}</p>
