--- a/templates/Ingame/QuestionShow_STAT.html
+++ b/templates/Ingame/QuestionShow_STAT.html
@@ -11,7 +11,8 @@
 <body>
     <div class="container">
         <h1>{{shcd}} {{txt}}</h1>
-        <p class="small-text">Yes-No</p>
+        <h1 class="mid-text">{{stat}}</h1>
+        <p class="small-text">Please read carefullly...</p>
         <h3>Timer: <span id="timer">{{rmn}}</span> seconds</h3>
     </div>
     <script>
