--- a/templates/SimpleRank.html
+++ b/templates/SimpleRank.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <h1>Q{{ qtn_order }} Result</h1>
+    <h1>{{ qtn_order }} Result</h1>
     <p>No.1&emsp;&emsp;<span id="simplerank_player1_name"></span>&emsp;&emsp;<span id="simplerank_player1_score"></span></p>
     <p>No.2&emsp;&emsp;<span id="simplerank_player2_name"></span>&emsp;&emsp;<span id="simplerank_player2_score"></span></p>
     <p>No.3&emsp;&emsp;<span id="simplerank_player3_name"></span>&emsp;&emsp;<span id="simplerank_player3_score"></span></p>
