--- a/static/styles.css
+++ b/static/styles.css
@@ -14,6 +14,8 @@ h1 {
     animation-duration: 2s;
 }
 
+
+
 .button {
     display: inline-block;
     font-size: 30px;
@@ -68,6 +70,15 @@ h1 {
 .small-text {
     font-size: 14px;
     color: #888;
+}
+
+.mid-text {
+    font-size: 200%;
+    position: relative;
+    width: 100%;
+    margin: 0 auto;
+    animation: simple_fade_in;
+    animation-duration: 2s;
 }
 
 .answer-option {
