--- a/templates/Ingame/AnswerShow_MMC.html
+++ b/templates/Ingame/AnswerShow_MMC.html
@@ -11,8 +11,8 @@
 
 <body>
     <div class="container">
-        <h1>{{showncode}} {{qtn}}</h1>
-        <h3>Timer: <span id="timer">15</span> seconds</h3>
+        <h1>{{shcd}} {{txt}}</h1>
+        <h3>Timer: <span id="timer">{{rmn}}</span> seconds</h3>
         <div id="answer-list" class="answer-list">
             
         </div>
