--- a/templates/Ingame/AnswerShow_SMC.html
+++ b/templates/Ingame/AnswerShow_SMC.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>{{showncode}} {{qtn}}</h1>
-        <h3>Timer: <span id="timer">15</span> seconds</h3>
+        <h1>{{shcd}} {{txt}}</h1>
+        <h3>Timer: <span id="timer">{{rmn}}</span> seconds</h3>
         <div class="answer-option">
             <button id="option-A" class="option-letter" onclick="pressedAnswerButton()">A</button>
         </div>
