--- a/templates/Ingame/AnswerShow_STAT.html
+++ b/templates/Ingame/AnswerShow_STAT.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-    <title>Question Show</title>
+    <title>Answer Show</title>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
     <script src="{{ url_for('static', filename='script.js') }}"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.2.0/socket.io.js"></script>
+    <script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
 </head>
-
 <body>
     <div class="container">
         <h1>{{shcd}} {{txt}}</h1>
-        <p class="small-text">Yes-No</p>
+        <h1 class="mid-text">Find Some Tips~</h1>
         <h3>Timer: <span id="timer">{{rmn}}</span> seconds</h3>
     </div>
     <script>
@@ -22,22 +21,18 @@
         function RefreshTimer() {
             //将room_id传到后端，再在后端计算剩余秒数传回
             socket.emit("getSecondsLeft", { "room_id": room_id }, function (left_seconds) {
-                document.getElementById('timer').textContent = left_seconds;
-                //秒数为0时跳转到SimpleRank
+                $("#timer").text(left_seconds);
+                //秒数为0时跳转到SimpleScoreShow.html
                 if (left_seconds <= 0) {
                     clearInterval(interval);
-                    window.location.href = 'Rank?room_id=' + room_id;
+                    window.location.href = 'ScoreShow?room_id=' + room_id;
                 }
             });
         }
-
-        //一打开问题后端就记录时间
-        socket.emit("newQuestion", room_id);
 
         // 每隔一段时间调用函数，单位为ms
         var interval = setInterval(RefreshTimer, 100);
        
     </script>
 </body>
-
 </html>
