--- a/templates/Ingame/QuestionShow_MMC.html
+++ b/templates/Ingame/QuestionShow_MMC.html
@@ -11,9 +11,9 @@
 
 <body>
     <div class="container">
-        <h1>{{showncode}} {{qtn}}</h1>
+        <h1>{{shcd}} {{txt}}</h1>
         <p class="small-text">Multi Select</p>
-        <h3>Timer: <span id="timer">15</span> seconds</h3>
+        <h3>Timer: <span id="timer">{{rmn}}</span> seconds</h3>
         <div id="answer-list">
             
         </div>
