--- a/templates/Ingame/AnswerShow_STAT.html
+++ b/templates/Ingame/AnswerShow_STAT.html
@@ -3,13 +3,14 @@
 <head>
     <title>Answer Show</title>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='Texture/texture_style.css') }}">
     <script src="{{ url_for('static', filename='script.js') }}"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.2.0/socket.io.js"></script>
     <script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
 </head>
 <body>
     <div class="container">
-        <h1>{{shcd}} {{txt}}</h1>
+        <h1 class="text-title">{{shcd}}</h1>
         <h1 class="mid-text">Find Some Tips~</h1>
         <h3>Timer: <span id="timer">{{rmn}}</span> seconds</h3>
     </div>
@@ -26,6 +27,8 @@
                 if (left_seconds <= 0) {
                     clearInterval(interval);
                     window.location.href = 'ScoreShow?room_id=' + room_id;
+                }else if(left_seconds <= 3){
+                    $("#timer").css({"color":"red"});
                 }
             });
         }
