--- a/static/styles.css
+++ b/static/styles.css
@@ -16,7 +16,19 @@ h1 {
 
 
 
-.button {
+.setting-button {
+    display: inline-block;
+    font-size: 30px;
+    padding: 10px 20px;
+    background-color: #ffb6c1;
+    text-decoration: none;
+    margin: 1% 2%;
+    border-radius: 15px;
+    animation: simple_fade_in;
+    animation-duration: 2s;
+}
+
+.option-button {
     display: inline-block;
     font-size: 30px;
     padding: 10px 20px;
@@ -38,10 +50,6 @@ h1 {
     position: absolute;
     top: 10px;
     right: 10px;
-}
-
-.button:hover {
-    background-color: #FFB6C1;
 }
 
 .player-list-table {
