--- a/templates/PreAnswer.html
+++ b/templates/PreAnswer.html
@@ -4,12 +4,13 @@
 <head>
     <title>PreAnswer</title>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='Texture/texture_style.css') }}">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.2.0/socket.io.js"></script>
 </head>
 
 <body>
     <div class="container">
-        <h2>Waiting for start...</h2>
+        <h2 class="mid-text">Waiting for start...</h2>
     </div>
     <script>
         // 定义一个函数，用于发送请求并检查房间状态
