--- a/templates/FinalRank.html
+++ b/templates/FinalRank.html
@@ -24,11 +24,11 @@
 
 <body>
     <div>
-        <a href="/" class="index-btn setting-button">Index</a>
+        <a href="/" class="hrline-button index-btn">Index</a>
     </div>
 
     <div>
-        <button class="screenshot-btn setting-button" onclick="takeScreenshot()">Screenshot</button>
+        <button class="hrline-button screenshot-btn" onclick="takeScreenshot()">Screenshot</button>
     </div>
 
     <div class="award-ceremony">
