--- a/templates/Ingame/AnswerShow_SMC.html
+++ b/templates/Ingame/AnswerShow_SMC.html
@@ -13,16 +13,16 @@
         <h1 class="text-title">{{shcd}}</h1>
         <h3>Timer: <span id="timer">{{rmn}}</span> seconds</h3>
         <div class="answer-option">
-            <button id="option-A" class="option-letter" onclick="pressedAnswerButton()">A</button>
+            <button id="option-A" class="option-button-SMC" style="position: absolute; left:6%;top:40%" onclick="pressedAnswerButton()">A</button>
         </div>
         <div class="answer-option">
-            <button id="option-B" class="option-letter" onclick="pressedAnswerButton()">B</button>
+            <button id="option-B" class="option-button-SMC" style="position: absolute;right:6%;top:55%" onclick="pressedAnswerButton()">B</button>
         </div>
         <div class="answer-option">
-            <button id="option-G" class="option-letter" onclick="pressedAnswerButton()">Γ</button>
+            <button id="option-G" class="option-button-SMC" style="position: absolute; left:6%;top:70%" onclick="pressedAnswerButton()">Γ</button>
         </div>
         <div class="answer-option">
-            <button id="option-D" class="option-letter" onclick="pressedAnswerButton()">Δ</button>
+            <button id="option-D" class="option-button-SMC" style="position: absolute; right:6%;top:85%" onclick="pressedAnswerButton()">Δ</button>
         </div>
     </div>
     <script>
