--- a/templates/Ingame/QuestionShow_SMC.html
+++ b/templates/Ingame/QuestionShow_SMC.html
@@ -11,25 +11,25 @@
 </head>
 
 <body>
-    <div class="container">
+    <div>
         <h1 class="text-title">{{shcd}} {{txt}}</h1>
         <p class="small-text">Single Select</p>
         <h3>Timer: <span id="timer">{{rmn}}</span> seconds</h3>
-        <div class="answer-option">
-            <p class="option-letter">A</p>
-            <p class="option-text">{{ opt[0] }}</p>
+        <div class="option-show-SMC">
+            <p class="setting-button">A</p>
+            <p class="mid-text">{{ opt[0] }}</p>
         </div>
-        <div class="answer-option">
-            <p class="option-letter">B</p>
-            <p class="option-text">{{ opt[1] }}</p>
+        <div class="option-show-SMC">
+            <p class="setting-button">B</p>
+            <p class="mid-text">{{ opt[1] }}</p>
         </div>
-        <div class="answer-option">
-            <p class="option-letter">Γ</p>
-            <p class="option-text">{{ opt[2] }}</p>
+        <div class="option-show-SMC">
+            <p class="setting-button">Γ</p>
+            <p class="mid-text">{{ opt[2] }}</p>
         </div>
-        <div class="answer-option">
-            <p class="option-letter">Δ</p>
-            <p class="option-text">{{ opt[3] }}</p>
+        <div class="option-show-SMC">
+            <p class="setting-button">Δ</p>
+            <p class="mid-text">{{ opt[3] }}</p>
         </div>
     </div>
     <script>
