--- a/templates/FinalScoreShow.html
+++ b/templates/FinalScoreShow.html
@@ -14,7 +14,7 @@
     </script>
 </head>
 
-<body>
+<body class="body-Rank">
     <h1 class="text-title">Result</h1>
     <p id="player_name" class="mid-text"></p>
     <p id="player_score" class="small-text">{{ score }}</p>
