--- a/templates/Ingame/AnswerShow_STAT.html
+++ b/templates/Ingame/AnswerShow_STAT.html
@@ -8,8 +8,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.2.0/socket.io.js"></script>
     <script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
 </head>
-<body>
-    <div class="container">
+<body class="body-Answer-Show-STAT">
+    <div>
         <h1 class="text-title">{{shcd}}</h1>
         <h1 class="mid-text">Find Some Tips~</h1>
         <h3>Timer: <span id="timer">{{rmn}}</span> seconds</h3>
