--- a/templates/Ingame/QuestionShow.html
+++ b/templates/Ingame/QuestionShow.html
@@ -11,6 +11,8 @@
 </head>
 
 <body>
+    <audio id="bgm-question-show" src="{{ url_for('static', filename='Texture/hats_and_kits_looping.mp3') }}" autoplay>Your
+        browser do not support audio.</audio>
     <div class="container">
         <h1 class="text-title">{{shcd}} {{txt}}</h1>
         <p class="small-text">Single Select</p>
