--- a/templates/Ingame/QuestionShow_STAT.html
+++ b/templates/Ingame/QuestionShow_STAT.html
@@ -10,7 +10,9 @@
     <script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
 </head>
 
-<body>
+<body class="body-Answer-Show-STAT">
+    <audio id="bgm-question-show" src="{{ url_for('static', filename='Texture/hats_and_kits_looping.mp3') }}" autoplay>Your
+        browser do not support audio.</audio>
     <div class="container">
         <h1 class="text-title">{{shcd}} {{txt}}</h1>
         <h1 class="mid-text">{{stat}}</h1>
@@ -21,6 +23,7 @@
         var socket = io.connect('http://' + document.domain + ':' + location.port);
         var urlParams = new URLSearchParams(window.location.search);
         var room_id = urlParams.get('room_id');
+        var three_sec_left = 0;
 
         function RefreshTimer() {
             //将room_id传到后端，再在后端计算剩余秒数传回
@@ -32,6 +35,12 @@
                     window.location.href = 'Rank?room_id=' + room_id;
                 }else if(left_seconds <= 3){
                     $("#timer").css({"color":"red"});
+                }
+            });
+            $("#bgm-question-show").on("timeupdate", function () {
+                if ((this.currentTime > this.duration - 0.225 ) && three_sec_left==0) {
+                    this.currentTime = 0;
+                    this.play();
                 }
             });
         }
