--- a/static/Texture/texture_style.css
+++ b/static/Texture/texture_style.css
@@ -1,3 +1,63 @@
+.body-Answer-Show-SMC{
+    text-align: left;
+    margin: 0;
+    padding: 6% 3% 0 8%;
+    background-image: url('SMC_bg.jpeg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+}
+
+.body-Answer-Show-STAT{
+    text-align: left;
+    margin: 0;
+    padding: 6% 3% 0 8%;
+    background-image: url('STAT_bg.jpeg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+}
+
+.body-Answer-Show-YN{
+    text-align: left;
+    margin: 0;
+    padding: 6% 3% 0 8%;
+    background-image: url('YN_bg.jpeg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+}
+
+.body-Rank{
+    text-align: center;
+    margin: 0;
+    padding: 8% 8% 0 8%;
+    background-image: url('SimpleRank_bg.jpeg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+}
+
+.body-RoomCreate{
+    text-align: center;
+    margin: 0;
+    padding: 10% 8% 0 8%;
+    background-image: url('RoomCreate_bg.jpeg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+}
+
+.body-RoomJoin{
+    text-align: center;
+    margin: 0;
+    padding: 10% 8% 0 8%;
+    background-image: url('RoomJoin_bg.jpeg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+}
+
 .index-bg {
     position: fixed;
     z-index: -100;
@@ -70,6 +130,14 @@
     animation-duration: 2s;
 }
 
+.scoreShow-small-text{
+    font-size: 200%;
+    font-family: "Exo2-SemiBold";
+    color: #9836c3;
+    animation: simple_fade_in_inplace;
+    animation-duration: 2s;
+}
+
 .rank-table{
     animation: simple_fade_in;
     animation-duration: 2s;
@@ -85,6 +153,11 @@
     animation-duration: 2s;
 }
 
+.grid-option-button-YN {
+    margin: 2%;
+    text-align: center;
+}
+
 .option-button-YN{
     margin: 2% 1%;
     -webkit-border-radius: 8;
@@ -92,13 +165,22 @@
     border-radius: 8px;
     color: #ffffff;
     font-size: 15ch;
-    background: #0099ff;
-    padding: 12% 8% 12% 8%;
+    padding: 12% 10% 12% 10%;
     text-decoration: none;
     animation: simple_fade_in_inplace;
     animation-duration: 2s;
-}.option-button-YN:hover {
-    background-color: #d8fff3;
+}
+
+#option-Y{
+    background: #04b72e;
+}#option-Y:hover{
+    background-color: #00c086;
+}
+
+#option-N{
+    background: #ff3b2d;
+}#option-N:hover{
+    background-color: #ff652d;
 }
 
 .option-button-SMC{
@@ -119,27 +201,37 @@
 }
 
 .option-show-SMC {
-    float: left;
-    padding: 2% auto;
+    display: block;
     align-items: center;
-    margin: auto;
-    justify-content: center;
+    margin: 1% 3% 3% 25%;
 }
 
 .option-show-letter-SMC{
-    display:inline;
-    font-size: 3ch;
-    padding: 1% 1%;
+    font-size: 4ch;
+    padding: 1% 3%;
+    width: 3ch;
+    height: 3ch;
     background-color: #22c795;
     text-decoration: none;
-    margin: 1.5% 40%;
+    margin: 0 1%;
     border-radius: 15px;
     box-shadow: 0px 3px 3px #3a4f41;
     animation: simple_fade_in;
     animation-duration: 2s;
 }
 
+.option-show-text-SMC {
+    font-size: 230%;
+    position: relative;
+    margin: 20% 3%;
+    animation: simple_fade_in;
+    animation-duration: 2s;
+}
 
+@font-face {
+    font-family: "Exo2-SemiBold";
+    src: url("Exo2-SemiBold.ttf");
+}
 
 @keyframes simple_fade_in {
     0% {
