--- a/templates/FinalRank.html
+++ b/templates/FinalRank.html
@@ -22,7 +22,7 @@
     </script>
 </head>
 
-<body>
+<body class="body-Rank">
     <div>
         <a href="/" class="hrline-button index-btn">Index</a>
     </div>
