--- a/templates/PreAnswer.html
+++ b/templates/PreAnswer.html
@@ -8,7 +8,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.2.0/socket.io.js"></script>
 </head>
 
-<body>
+<body class="body-RoomJoin">
     <div class="container">
         <h2 class="mid-text">Waiting for start...</h2>
     </div>
@@ -18,11 +18,14 @@
         var room_id = urlParams.get('room_id');
         var socket = io.connect('http://' + document.domain + ':' + location.port);
         function checkRoomStatus() {
-            socket.emit("checkRoomStatus", room_id, function (room_status) {
+            socket.emit("checkRoomStatus", { "room_id": room_id, "user_name":sessionStorage.getItem("user_name") }, function (room_status) {
                 console.log(room_status);
                 if (room_status === 0) {
                     // 如果房间状态为0，跳转到AnswerShow页面
                     window.location.href = '/AnswerShow?room_id=' + room_id;
+                }else if(room_status===-99){
+                    // 如果房间状态为-99則玩家不存在（或被刪除），跳轉回index
+                    window.location.href = "/";
                 }
             });
 
