--- a/templates/RoomCreate.html
+++ b/templates/RoomCreate.html
@@ -55,7 +55,7 @@
     </script>
 </head>
 
-<body>
+<body class="body-RoomCreate">
     <div class="container">
         <h1>Room Create</h1>
         <div class="upload-container">
