--- a/templates/RoomJoin.html
+++ b/templates/RoomJoin.html
@@ -31,7 +31,7 @@
     </script>
 </head>
 
-<body>
+<body class="body-RoomJoin">
     <div class="container">
         <h1>Join Room</h1>
         <div class="form-group">
