--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <title>SimpleQA</title>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='Texture/texture_style.css') }}">
-    <link rel="icon" type="image/png" href="/static/favicon.png">
+    <link rel="icon" type="image/png" href="/static/favicon.ico">
 
 </head>
 <body>
