--- a/templates/lobby.html
+++ b/templates/lobby.html
@@ -4,17 +4,20 @@
 <head>
     <title>Lobby Page</title>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='Texture/texture_style.css') }}">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.2.0/socket.io.js"></script>
     <script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
 </head>
 
 <body>
     <h1>Lobby Page</h1>
+    <button class="setting-button" onclick="ClearAllRoomData()">Clear(Attention!)</button>
     <div>
         <textarea id="room_data_show" readonly>
             0
         </textarea>
     </div>
+    <div class="index-bg"></div>
     <script>
         var socket = io.connect('http://' + document.domain + ':' + location.port);
 
@@ -24,6 +27,13 @@
                 //$("#room_data_show").text(res);
             });
         }
+
+        function ClearAllRoomData(){
+            socket.emit("ClearAllRoomData",1,(res)=>{
+                alert("Rooms={'000000': Room('000000')} is done.");
+            });
+        }
+
         // 每隔一段时间调用函数，单位为ms
         var interval = setInterval(RefreshRoomDataShow, 500);
     </script>
