--- a/templates/Ingame/AnswerShow_SMC.html
+++ b/templates/Ingame/AnswerShow_SMC.html
@@ -2,11 +2,13 @@
 <html>
 <head>
     <title>Answer Show</title>
+    <link rel="preload" as="image" href="{{ url_for('static', filename='Texture/SMC_bg.jpeg') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='Texture/texture_style.css') }}">
     <script src="{{ url_for('static', filename='script.js') }}"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.2.0/socket.io.js"></script>
     <script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
+    
 </head>
 <body class="body-Answer-Show-SMC">
     <div>
