--- a/templates/Ingame/QuestionShow_MMC.html
+++ b/templates/Ingame/QuestionShow_MMC.html
@@ -4,6 +4,7 @@
 <head>
     <title>Question Show</title>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
+    <link rel="preload" as="audio" href="{{ url_for('static', filename='Texture/hats_and_kits_looping.mp3') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='Texture/texture_style.css') }}">
     <script src="{{ url_for('static', filename='script.js') }}"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.2.0/socket.io.js"></script>
