--- a/templates/Ingame/QuestionShow_YN.html
+++ b/templates/Ingame/QuestionShow_YN.html
@@ -3,11 +3,14 @@
 
 <head>
     <title>Question Show</title>
+    <link rel="preload" as="image" href="{{ url_for('static', filename='Texture/YN_bg.jpeg') }}">
+    <link rel="preload" as="audio" href="{{ url_for('static', filename='Texture/hats_and_kits_looping.mp3') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='Texture/texture_style.css') }}">
     <script src="{{ url_for('static', filename='script.js') }}"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.2.0/socket.io.js"></script>
     <script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
+    
 </head>
 
 <body class="body-Answer-Show-YN">
