--- a/templates/PreAnswer.html
+++ b/templates/PreAnswer.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='Texture/texture_style.css') }}">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.2.0/socket.io.js"></script>
+    <link rel="preload" as="image" href="{{ url_for('static', filename='Texture\SimpleRank_bg.jpeg') }}">
 </head>
 
 <body class="body-RoomJoin">
