--- a/templates/SimpleRank.html
+++ b/templates/SimpleRank.html
@@ -33,6 +33,7 @@
     </div>
     <!-- Add more players as needed -->
     <button id="next-button" class="hrline-button" onclick="toNextQuestion()">NEXT</button>
+    <p class="small-text" id="count_ready_players"></p>
     <script>
         function RefreshRank() {
             socket.emit("checkRankPlayers", room_id, function (res) {
@@ -43,8 +44,15 @@
                 $("#simplerank_player3_name").text(res["p3_name"]);
                 $("#simplerank_player3_score").text(res["p3_score"]);
             });
+
         }
         RefreshRank();
+        function RefreshReadys() {
+            socket.emit("countReadyPlayers", room_id, (res) => {
+                $("#count_ready_players").text(res);
+            });
+        }
+        var interval = setInterval(RefreshReadys, 500);
     </script>
 </body>
 
