--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,10 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='Texture/texture_style.css') }}">
     <link rel="icon" type="image/png" href="/static/favicon.ico">
-
+    <link rel="dns-prefetch" href="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.2.0/"> 
+    <link rel="dns-prefetch" href="https://apps.bdimg.com/libs/jquery/2.1.4/"> 
+    <link rel="dns-prefetch" href="https://html2canvas.hertzen.com/dist/"> 
+    
 </head>
 <body>
     <h1 class="index-title">SimpleQA</h1>
